--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ subjects:
 - !lcsh 'Industrial relations -- Fiction'
 - !lcsh 'Ex-convicts -- Fiction'
 - !lcc 'PS'
+- GITenberg
 title: The Ancient Law
 url: http://www.gutenberg.org/ebooks/34419
